# RL-mini-projects

./: .gitignore  pyproject.toml
healthy_banana_navigation/: agent.py  main.py  monitor.py  neural_network.py  qnetwork  replay_buffer.py
simple-custom-env/: env.py  main.py
simple-custom-env/tensorboard/1e7_1/: events.out.tfevents.1667044181.dez.9788.0
simple-custom-env/tensorboard/rew_3/: events.out.tfevents.1666464589.dez.88444.0
simple-custom-env/tensorboard/rew_4/: events.out.tfevents.1666466495.dez.94236.0
simple-custom-env/tensorboard/rew_5/: events.out.tfevents.1666467523.dez.97804.0
simple-custom-env/tensorboard/rew_6/: events.out.tfevents.1666468318.dez.100564.0
simple-custom-env/tensorboard/rew_7/: events.out.tfevents.1666469591.dez.104942.0
simple-custom-env/tensorboard/rew_8/: events.out.tfevents.1666472496.dez.113492.0
snake/: fruit.py  game.py  main.py  snake.py
target_reacher/: agent.py  exploration_noise.py  learned_policy  main.py  monitor.py  neural_net.py  policy.py  replay_buffer.py  schedule.py
taxi/: agent.py  main.py  monitor.py
taxi/learned_policies/: learned_policy_from_expected_sarsa.pickle  learned_policy_from_q_learning.pickle  learned_policy_from_sarsa.pickle
